# security-checker-mcp-http

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  create-service.sh  deploy.sh  docker-compose.yml  express-primary-container.json  iam-roles.sh  json-fix.sh  pyproject.toml  secrets-management.sh  security_report.md  security_report_2026-04-15.md  security_report_2026-04-22.md  security_report_full_initial.md  security_report_tests_fixtures_2026-05-26.md  security_report_tests_fixtures_2026-05-28.md
.cursor/rules/: security-reviewer.mdc
.github/: copilot-instructions.md  secret-scanning.yml
knowledge/chroma_store/: chroma.sqlite3
knowledge/chunks/: guidelines_chunks.json
scripts/: http_smoke_test.py
src/security_checker/: embedding_utils.py  limits.py  mcp_server.py
src/security_checker/scripts/: build_kb.py
src/security_checker/tools/: file_reader.py  file_scanner.py  guideline_search.py  scan.py  secret_scanner.py
tests/: test_scan.py
tests/fixtures/: .env.test  nginx.conf  package.json  vulnerable_app.py
