[project]
name = "security-checker-mcp"
version = "0.1.0"
description = "MCP server for security guidelines compliance review"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp[cli]>=1.12.0",
    "chromadb>=0.5.0",
]

[project.scripts]
security-checker-mcp = "security_checker.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
